--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-i18n": "^8.15.5",
-    "vuikit": "^0.8.10"
+    "vuikit": "^0.8.10",
+    "wavesurfer.js": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
