--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,8 @@ jobs:
       - run: yarn
       - run: yarn build
       
-      - name: Setup Static Folder
-        run: |
-          echo "srt.coderemixer.com" > ./dist/CNAME
-
       - name: deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
